--- a/css/styles.css
+++ b/css/styles.css
@@ -285,8 +285,7 @@ a.white {
 	background-color: #fff;
 	color: #555;
 	font: 400 0.875rem/1.875rem "Open Sans", sans-serif;
-	transition: all 0.2s;
-	-webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
+	transition: all 0.2s; /* removes inner shadow on form inputs on ios safari */
 }
 
 .form-control-select {
